# Sensor-Client-Win

./: .gitignore  SensorClientWin.sln  SensorClientWin.vcxproj  buffer_util.h  common.h  config.h  controller.c  controller.h  convert.h  decoder.h  device.h  fps_counter.c  log.h  main.c  meson.build  meson_options.txt  net.c  net.h  recorder.h  scrcpy.c  scrcpy.h  server.c  server.h  tiny_xpm.h
app/: meson.build
app/src/: SensorClientWin.vcxproj.filters  command.c  command.h  control_event.c  control_event.h  decoder.c  file_handler.c  file_handler.h  fps_counter.h  frames.c  frames.h  input_manager.c  lock_util.c  main.c  screen.c  screen.h  server.c  stdafx.cpp  tiny_xpm.c
app/src/sys/win/: command.c
x64/Debug/: cleanup.bat
